--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,40 +1,26 @@
-# automatically build and release the binaries in ./bin folder. use make all to build all binaries. upload load them to a release. get the version from the VERSION file.
-#build.yml - This is a github action file that will build the binaries and upload them to a release. It will also update the version in the VERSION file.
-
-# .github/workflows/build.yml
-name: build
-
-on:
-  push:
-    branches:
-      - main
-
-jobs:
-  build:
-    name: Build
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - name: Build
-      run: make all
-    - name: Create Release
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
-        draft: false
-        prerelease: false
-    - name: Upload Release Asset
-      id: upload-release-asset
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./bin/
-        asset_name: bin.zip
-        asset_content_type: application/zip
-
+---
+    name: "tagged-release"
+    
+    on:
+      push:
+        tags:
+          - "v*"
+    
+    jobs:
+      tagged-release:
+        name: "Tagged Release"
+        runs-on: "ubuntu-latest"
+    
+        steps:
+          # ...
+          - name: "Build & test"
+            run: |
+              echo "done!"
+    
+          - uses: "marvinpinto/action-automatic-releases@latest"
+            with:
+              repo_token: "${{ secrets.GITHUB_TOKEN }}"
+              prerelease: false
+              files: |
+                LICENSE.txt
+                ./bin/*
