--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -13,9 +13,11 @@
   
       steps:
         # ...
-        - name: "Build & test"
+        - name: "Checkout"
+          uses: "actions/checkout@v2"
+        - name: build
           run: |
-            echo "done!"
+            make all
   
         - uses: "marvinpinto/action-automatic-releases@latest"
           with:
@@ -26,4 +28,3 @@
             files: |
               LICENSE.txt
               ./bin/*
-              
