--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -18,13 +18,14 @@
         - name: build
           run: |
             make all
+          
   
         - uses: "marvinpinto/action-automatic-releases@latest"
           with:
             repo_token: "${{ secrets.GITHUB_TOKEN }}"
             automatic_release_tag: "latest"
             prerelease: true
-            title: "Development Build"
+            title: "Development Build - $(date +'%Y-%m-%d %H:%M:%S')"
             files: |
               LICENSE.txt
               ./bin/*
