--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,7 @@
           # ...
           - name: "Build & test"
             run: |
+              make 
               echo "done!"
     
           - uses: "marvinpinto/action-automatic-releases@latest"
