--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,8 @@
         runs-on: "ubuntu-latest"
     
         steps:
-          # ...
+          - name: "Checkout"
+            uses: "actions/checkout@v2"
           - name: "Build"
             run: |
               make all
